; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ieee.c_ieee_require_atn65.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ieee.c_ieee_require_atn65.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee_info = type { i32 }

@ieee_at_record_enum = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"missing required ATN65\00", align 1
@FALSE = common dso_local global i32 0, align 4
@ieee_atn_record_enum = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"bad ATN65 record\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee_info*, i32**, i8**, i64*)* @ieee_require_atn65 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ieee_require_atn65(%struct.ieee_info* %0, i32** %1, i8** %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ieee_info*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store %struct.ieee_info* %0, %struct.ieee_info** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i64* %3, i64** %9, align 8
  %15 = load i32**, i32*** %7, align 8
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %10, align 8
  %17 = load i32**, i32*** %7, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %18, align 4
  %20 = zext i32 %19 to i64
  store i64 %20, i64* %11, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i64, i64* @ieee_at_record_enum, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %4
  %25 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @_(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %28 = call i32 @ieee_error(%struct.ieee_info* %25, i32* %26, i32 %27)
  %29 = load i32, i32* @FALSE, align 4
  store i32 %29, i32* %5, align 4
  br label %89

30:                                               ; preds = %4
  %31 = load i32**, i32*** %7, align 8
  %32 = load i32*, i32** %31, align 8
  %33 = getelementptr inbounds i32, i32* %32, i32 1
  store i32* %33, i32** %31, align 8
  %34 = load i64, i64* %11, align 8
  %35 = trunc i64 %34 to i32
  %36 = shl i32 %35, 8
  %37 = load i32**, i32*** %7, align 8
  %38 = load i32*, i32** %37, align 8
  %39 = load i32, i32* %38, align 4
  %40 = or i32 %36, %39
  %41 = zext i32 %40 to i64
  store i64 %41, i64* %11, align 8
  %42 = load i64, i64* %11, align 8
  %43 = load i64, i64* @ieee_atn_record_enum, align 8
  %44 = icmp ne i64 %42, %43
  br i1 %44, label %45, label %51

45:                                               ; preds = %30
  %46 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %47 = load i32*, i32** %10, align 8
  %48 = call i32 @_(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %49 = call i32 @ieee_error(%struct.ieee_info* %46, i32* %47, i32 %48)
  %50 = load i32, i32* @FALSE, align 4
  store i32 %50, i32* %5, align 4
  br label %89

51:                                               ; preds = %30
  %52 = load i32**, i32*** %7, align 8
  %53 = load i32*, i32** %52, align 8
  %54 = getelementptr inbounds i32, i32* %53, i32 1
  store i32* %54, i32** %52, align 8
  %55 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %56 = load i32**, i32*** %7, align 8
  %57 = call i32 @ieee_read_number(%struct.ieee_info* %55, i32** %56, i64* %12)
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %69

59:                                               ; preds = %51
  %60 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %61 = load i32**, i32*** %7, align 8
  %62 = call i32 @ieee_read_number(%struct.ieee_info* %60, i32** %61, i64* %13)
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %69

64:                                               ; preds = %59
  %65 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %66 = load i32**, i32*** %7, align 8
  %67 = call i32 @ieee_read_number(%struct.ieee_info* %65, i32** %66, i64* %14)
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %71, label %69

69:                                               ; preds = %64, %59, %51
  %70 = load i32, i32* @FALSE, align 4
  store i32 %70, i32* %5, align 4
  br label %89

71:                                               ; preds = %64
  %72 = load i64, i64* %13, align 8
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %77, label %74

74:                                               ; preds = %71
  %75 = load i64, i64* %14, align 8
  %76 = icmp ne i64 %75, 65
  br i1 %76, label %77, label %83

77:                                               ; preds = %74, %71
  %78 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %79 = load i32*, i32** %10, align 8
  %80 = call i32 @_(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %81 = call i32 @ieee_error(%struct.ieee_info* %78, i32* %79, i32 %80)
  %82 = load i32, i32* @FALSE, align 4
  store i32 %82, i32* %5, align 4
  br label %89

83:                                               ; preds = %74
  %84 = load %struct.ieee_info*, %struct.ieee_info** %6, align 8
  %85 = load i32**, i32*** %7, align 8
  %86 = load i8**, i8*** %8, align 8
  %87 = load i64*, i64** %9, align 8
  %88 = call i32 @ieee_read_id(%struct.ieee_info* %84, i32** %85, i8** %86, i64* %87)
  store i32 %88, i32* %5, align 4
  br label %89

89:                                               ; preds = %83, %77, %69, %45, %24
  %90 = load i32, i32* %5, align 4
  ret i32 %90
}

declare dso_local i32 @ieee_error(%struct.ieee_info*, i32*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @ieee_read_number(%struct.ieee_info*, i32**, i64*) #1

declare dso_local i32 @ieee_read_id(%struct.ieee_info*, i32**, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
